# courier

./: .gitignore  Cargo.toml  rustfmt.toml  tarpaulin.toml
.claude/: CLAUDE.md  settings.json
builtin/: Cargo.toml  build.rs
builtin/src/: generated.rs  lib.rs
builtins/builtin_echo/: Cargo.toml
builtins/echo/: Cargo.toml
builtins/echo/src/: lib.rs
builtins/test_boot/: Cargo.toml
builtins/test_boot/src/: lib.rs
courier/: Cargo.toml
courier/src/: lib.rs  main.rs
courier_core/depot/: Cargo.toml
courier_core/depot/src/: builder.rs  error.rs  lib.rs  server.rs
courier_core/logger/: Cargo.toml
courier_core/logger/src/: builder.rs  error.rs  flow.rs  flows.rs  format.rs  level.rs  lib.rs  logger.rs  macros.rs  message.rs  record.rs
courier_core/logger/src/flows/: console.rs  file.rs
courier_core/logger/tests/: integration.rs
courier_core/macros/: Cargo.toml
courier_core/macros/src/: lib.rs
courier_core/network/: Cargo.toml
courier_core/network/src/: connection_pool.rs  context.rs  frame.rs  keep_alive.rs  lib.rs  protocol.rs  request.rs  response.rs  stream.rs  transport.rs
courier_core/network/src/transport/: tcp.rs  udp.rs
courier_core/pipeline/: Cargo.toml
courier_core/pipeline/src/: builder.rs  layer.rs  lib.rs  middleware.rs  mixin.rs  pipeline.rs  service.rs  stack.rs
courier_core/protocol/: Cargo.toml
courier_core/protocol/src/: error.rs  lib.rs  protocol.rs
courier_core/relay/: Cargo.toml
courier_core/relay/src/: builder.rs  chain.rs  layer.rs  lib.rs  middleware.rs  pipeline.rs  wrappers.rs
docs/: comments-style.md
src/depot/: Cargo.toml
src/waybill/: Cargo.toml
waybill/: Cargo.toml
waybill/src/: cli.rs  lib.rs
waybill/src/commands/: list.rs  start.rs
