[workspace]
members = ["builtin",
  "builtins/*",
  "courier",
  "courier_core/*",
  "waybill",
]
resolver = "3"

[workspace.package]
description = "A network server software"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"

[workspace.dependencies]
tokio = "1.52.1"
thiserror = "2.0.18"
