[package]
name = "courier"
description.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
doc = false

[dependencies]
depot = { path = "../courier_core/depot" }
logger = { path = "../courier_core/logger" }
network = { path = "../courier_core/network" }
pipeline = { path = "../courier_core/pipeline" }
protocol = { path = "../courier_core/protocol" }
