[package]
name = "waybill"
description = "Control program for project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
doc = false

[features]
builtin_echo = ["dep:builtin_echo"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo"] }

builtin_echo = { path = "../builtins/echo", optional = true }
