[package]
name = "depot"
description = "Server instance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
thiserror.workspace = true

network = { path = "../network" }
relay = { path = "../relay" }
protocol = { path = "../protocol" }
logger = { path = "../logger" }
