[package]
name = "relay"
description = "Relay system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
network = { path = "../network" }
protocol = { path = "../protocol" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
